--- a/iatkos/index.html
+++ b/iatkos/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container my-3">
-        <button id="loginBtn" class="btn btn-primary">Log in with Google</button>
+        <button id="loginBtn" class="btn btn-outline-dark">Log in with Google</button>
         <script>
             const BLOG_ID = '2499792346422287330'; 
             const OAUTH_CLIENT_ID = '117738437504-k35v9mamlssq1t8062cs4dqn9nlnldc1.apps.googleusercontent.com';
@@ -47,7 +47,7 @@
             };
         </script>
     </div>
-    
+
     <div class="container my-3">
         <h1 class="text-center">Manage Blog Posts</h1>
 
