--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <script>
         let accessToken = null;
-        const CLIENT_ID = 'TU_CLIENT_ID'; // ¡REEMPLAZA con tu ID de cliente de Google Cloud!
+        const CLIENT_ID = '453533828701-l7rm9i7ved0mg7kvfu0oksq4t9smbakb.apps.googleusercontent.com'; // ¡REEMPLAZA con tu ID de cliente de Google Cloud!
         const BLOG_ID = '3894102744035730320';     // ¡REEMPLAZA con el ID de tu blog de Blogger!
 
         // ¡RECUERDA REEMPLAZAR 'TU_CLIENT_ID' y 'TU_BLOG_ID' con tus valores reales!
