--- a/iatkos/index.html
+++ b/iatkos/index.html
@@ -8,6 +8,7 @@
     <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
+ 
     <div class="container my-3">
         <button id="loginBtn" class="btn btn-outline-dark">Log in with Google</button>
         <script>
@@ -17,8 +18,11 @@
             function authenticate() {
                 return gapi.auth2.getAuthInstance()
                     .signIn({scope: "https://www.googleapis.com/auth/blogger"})
-                    .then(() => { console.log("Authenticated successfully!"); },
-                          (err) => { console.error("Error during authentication", err); });
+                    .then(() => { 
+                        console.log("Authenticated successfully!");
+                        document.getElementById('postForm').style.display = 'block';
+                    },
+                    (err) => { console.error("Error during authentication", err); });
             }
 
             function loadClient() {
@@ -52,7 +56,7 @@
         <h1 class="text-center">Manage Blog Posts</h1>
 
         <!-- Formulario para crear/editar un post -->
-        <form id="postForm" class="mt-4">
+        <form id="postForm" class="mt-4" style="display: none;">
             <div class="mb-3">
                 <label for="postId" class="form-label">Post ID (only for edit/delete)</label>
                 <input type="text" class="form-control" id="postId" placeholder="Leave empty for new post">
@@ -86,8 +90,11 @@
         function authenticate() {
             return gapi.auth2.getAuthInstance()
                 .signIn({scope: "https://www.googleapis.com/auth/blogger"})
-                .then(() => { console.log("Authenticated successfully!"); },
-                      (err) => { console.error("Error during authentication", err); });
+                .then(() => { 
+                    console.log("Authenticated successfully!");
+                    document.getElementById('postForm').style.display = 'block';
+                },
+                (err) => { console.error("Error during authentication", err); });
         }
     
         // Carga la API del cliente de Google
@@ -189,5 +196,7 @@
             initClient();
         }
     </script>
+
+    
 </body>
 </html>
