--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 p-4 font-sans">
     <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
-        <h1 class="text-2xl font-bold mb-6 text-gray-800">Editor INSEGURO de Posts de Blogger (EDUCATIVO)</h1>
+        <h1 class="text-2xl font-bold mb-6 text-gray-800">Editor INSEGURO de Posts de Blogger (EDUCATIVO v2)</h1>
         <p class="text-red-500 mb-4"><strong>¡ADVERTENCIA DE SEGURIDAD! ESTO ES SOLO PARA FINES EDUCATIVOS. NO USAR EN PRODUCCIÓN.</strong></p>
 
         <div id="auth-section" class="mb-6">
