--- a/index.html
+++ b/index.html
@@ -1,41 +1,115 @@
 <!DOCTYPE html>
-<html lang="es">
+<html class="dark" lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editor INSEGURO de Posts para Blogger (EDUCATIVO v2)</title>
-    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Editor INSEGURO de Posts para Blogger (EDUCATIVO v3)</title>
+
+  <!-- Tailwind CSS 3.4.16 -->
+  <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+
+  <!-- Google APIs (para autenticación y Blogger API) -->
+  <script src="https://apis.google.com/js/api.js"></script>
 </head>
-<body class="bg-gray-100 p-4 font-sans">
-    <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
-        <h1 class="text-2xl font-bold mb-6 text-gray-800">Editor INSEGURO de Posts de Blogger (EDUCATIVO v2)</h1>
-        <p class="text-red-500 mb-4"><strong>¡ADVERTENCIA DE SEGURIDAD! ESTO ES SOLO PARA FINES EDUCATIVOS. NO USAR EN PRODUCCIÓN.</strong></p>
+<body class="bg-white dark:bg-gray-900 p-4 font-sans">
+  <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
+    <h1 class="text-2xl font-bold mb-4 text-gray-800">
+      Editor INSEGURO de Posts de Blogger (EDUCATIVO v3)
+    </h1>
+    <p class="text-red-500 mb-4 font-semibold">
+      ¡ADVERTENCIA DE SEGURIDAD! ESTO ES SOLO PARA FINES EDUCATIVOS. NO USAR EN PRODUCCIÓN.
+    </p>
 
-        <div id="auth-section" class="mb-6">
-            <button onclick="authenticate()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-                1. Iniciar Sesión con Google
-            </button>
-            <div id="authStatus" class="mt-2 text-sm text-gray-700 italic"></div>
-        </div>
-
-        <div id="editor-section" class="hidden">
-            <h2 class="text-xl font-semibold mb-4 text-gray-800">Editor de Posts</h2>
-            <div class="mb-4">
-                <label for="postId" class="block text-gray-700 text-sm font-bold mb-2">ID del Post a Editar:</label>
-                <input type="text" id="postId" placeholder="ID del Post" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            </div>
-            <div class="mb-6">
-                <label for="content" class="block text-gray-700 text-sm font-bold mb-2">Nuevo Contenido del Post:</label>
-                <textarea id="content" placeholder="Nuevo Contenido" rows="8" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>
-            </div>
-            <button onclick="editPost()" id="editButton" disabled class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50">
-                2. Editar Post (Desactivado hasta autenticar)
-            </button>
-            <div id="editStatus" class="mt-2 text-sm text-gray-700 italic"></div>
-        </div>
+    <!-- Sección de autenticación -->
+    <div id="auth-section" class="mb-6">
+      <button
+        onclick="authenticate()"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+      >
+        1. Iniciar Sesión con Google
+      </button>
+      <div id="authStatus" class="mt-2 text-sm text-gray-700 italic"></div>
     </div>
 
-    <script src="js/script.js"></script>
+    <!-- Sección de edición (oculta hasta autenticarse) -->
+    <div id="editor-section" class="hidden">
+      <h2 class="text-xl font-semibold mb-4 text-gray-800">Crear / Editar / Borrar Post</h2>
+      
+      <!-- Campo para ID del Post (solo necesario para Editar/Borrar) -->
+      <div class="mb-4">
+        <label for="postId" class="block text-gray-700 text-sm font-bold mb-2">
+          ID del Post:
+        </label>
+        <input
+          type="text"
+          id="postId"
+          placeholder="(Solo necesario para Editar/Borrar)"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        />
+      </div>
+
+      <!-- Campo para Título del Post (Crear/Editar) -->
+      <div class="mb-4">
+        <label for="postTitle" class="block text-gray-700 text-sm font-bold mb-2">
+          Título del Post:
+        </label>
+        <input
+          type="text"
+          id="postTitle"
+          placeholder="Título del Post"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        />
+      </div>
+
+      <!-- Campo para Contenido del Post (Crear/Editar) -->
+      <div class="mb-6">
+        <label for="postContent" class="block text-gray-700 text-sm font-bold mb-2">
+          Contenido del Post:
+        </label>
+        <textarea
+          id="postContent"
+          placeholder="Escribe aquí el contenido..."
+          rows="6"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        ></textarea>
+      </div>
+
+      <!-- Botones de acción -->
+      <div class="flex flex-col gap-3 sm:flex-row sm:gap-4">
+        <button
+          onclick="createPost()"
+          id="createButton"
+          disabled
+          class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+        >
+          Crear Post
+        </button>
+
+        <button
+          onclick="editPost()"
+          id="editButton"
+          disabled
+          class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+        >
+          Editar Post
+        </button>
+
+        <button
+          onclick="deletePost()"
+          id="deleteButton"
+          disabled
+          class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+        >
+          Borrar Post
+        </button>
+      </div>
+
+      <!-- Mensajes de estado o retroalimentación -->
+      <div id="editorStatus" class="mt-4 text-sm text-gray-700 italic"></div>
+    </div>
+  </div>
+
+  <!-- Archivo JS donde estará la lógica (autenticación, CRUD, etc.) -->
+  <script src="js/script.js"></script>
 </body>
 </html>
