--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Editor INSEGURO de Posts para Blogger (EDUCATIVO v3)</title>
+  <title>Google Auth con CSP Ejemplo</title>
+  
+  <!--
+    Content Security Policy (CSP):
+    - Permite scripts de 'self' (tu propio dominio),
+      así como de apis.google.com y www.gstatic.com.
+    - Permite estilos de self, Tailwind y 'unsafe-inline'.
+    - Ajusta connect-src para poder conectar con las APIs de Google.
+    - Ajusta frame-src para iframes de Google (como la ventana de login).
+  -->
+  <meta http-equiv="Content-Security-Policy"
+        content="
+          default-src 'self';
+          script-src 'self' https://apis.google.com https://www.gstatic.com 'unsafe-inline';
+          style-src 'self' https://cdn.tailwindcss.com 'unsafe-inline';
+          connect-src 'self' https://apis.google.com https://www.googleapis.com;
+          frame-src 'self' https://accounts.google.com;
+        "
+  />
 
   <!-- Tailwind CSS 3.4.16 -->
   <script src="https://cdn.tailwindcss.com/3.4.16"></script>
@@ -14,10 +32,10 @@
 <body class="bg-white dark:bg-gray-900 p-4 font-sans">
   <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
     <h1 class="text-2xl font-bold mb-4 text-gray-800">
-      Editor INSEGURO de Posts de Blogger (EDUCATIVO v3)
+      Ejemplo: Autenticación con Google y Blogger
     </h1>
     <p class="text-red-500 mb-4 font-semibold">
-      ¡ADVERTENCIA DE SEGURIDAD! ESTO ES SOLO PARA FINES EDUCATIVOS. NO USAR EN PRODUCCIÓN.
+      CSP Ajustada para permitir scripts de Google
     </p>
 
     <!-- Sección de autenticación -->
@@ -31,11 +49,13 @@
       <div id="authStatus" class="mt-2 text-sm text-gray-700 italic"></div>
     </div>
 
-    <!-- Sección de edición (oculta hasta autenticarse) -->
+    <!-- Sección del editor (CRUD) -->
     <div id="editor-section" class="hidden">
-      <h2 class="text-xl font-semibold mb-4 text-gray-800">Crear / Editar / Borrar Post</h2>
+      <h2 class="text-xl font-semibold mb-4 text-gray-800">
+        Crear / Editar / Borrar Post
+      </h2>
       
-      <!-- Campo para ID del Post (solo necesario para Editar/Borrar) -->
+      <!-- Campo para ID del Post (editar/borrar) -->
       <div class="mb-4">
         <label for="postId" class="block text-gray-700 text-sm font-bold mb-2">
           ID del Post:
@@ -43,12 +63,12 @@
         <input
           type="text"
           id="postId"
-          placeholder="(Solo necesario para Editar/Borrar)"
+          placeholder="(Necesario para Editar/Borrar)"
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         />
       </div>
 
-      <!-- Campo para Título del Post (Crear/Editar) -->
+      <!-- Título del Post (crear/editar) -->
       <div class="mb-4">
         <label for="postTitle" class="block text-gray-700 text-sm font-bold mb-2">
           Título del Post:
@@ -61,7 +81,7 @@
         />
       </div>
 
-      <!-- Campo para Contenido del Post (Crear/Editar) -->
+      <!-- Contenido del Post (crear/editar) -->
       <div class="mb-6">
         <label for="postContent" class="block text-gray-700 text-sm font-bold mb-2">
           Contenido del Post:
@@ -104,12 +124,11 @@
         </button>
       </div>
 
-      <!-- Mensajes de estado o retroalimentación -->
       <div id="editorStatus" class="mt-4 text-sm text-gray-700 italic"></div>
     </div>
   </div>
 
-  <!-- Archivo JS donde estará la lógica (autenticación, CRUD, etc.) -->
+  <!-- Código JS para la Autenticación y CRUD de Blogger -->
   <script src="js/script.js"></script>
 </body>
 </html>
