--- a/index.html
+++ b/index.html
@@ -1,134 +1,117 @@
 <!DOCTYPE html>
 <html class="dark" lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Google Auth con CSP Ejemplo</title>
-  
-  <!--
-    Content Security Policy (CSP):
-    - Permite scripts de 'self' (tu propio dominio),
-      así como de apis.google.com y www.gstatic.com.
-    - Permite estilos de self, Tailwind y 'unsafe-inline'.
-    - Ajusta connect-src para poder conectar con las APIs de Google.
-    - Ajusta frame-src para iframes de Google (como la ventana de login).
-  -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self' https://apis.google.com https://www.gstatic.com 'unsafe-inline';
-          style-src 'self' https://cdn.tailwindcss.com 'unsafe-inline';
-          connect-src 'self' https://apis.google.com https://www.googleapis.com;
-          frame-src 'self' https://accounts.google.com;
-        "
-  />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google Auth con CSP Ejemplo</title>
 
-  <!-- Tailwind CSS 3.4.16 -->
-  <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <meta http-equiv="Content-Security-Policy"
+          content="
+            default-src 'self';
+            script-src 'self' https://apis.google.com https://www.gstatic.com 'unsafe-inline';
+            style-src 'self' https://cdn.tailwindcss.com 'unsafe-inline';
+            connect-src 'self' https://apis.google.com https://www.googleapis.com;
+            frame-src 'self' https://accounts.google.com;
+          "
+    />
 
-  <!-- Google APIs (para autenticación y Blogger API) -->
-  <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+
+    <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body class="bg-white dark:bg-gray-900 p-4 font-sans">
-  <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
-    <h1 class="text-2xl font-bold mb-4 text-gray-800">
-      Ejemplo: Autenticación con Google y Blogger
-    </h1>
-    <p class="text-red-500 mb-4 font-semibold">
-      CSP Ajustada para permitir scripts de Google
-    </p>
+    <div class="max-w-xl mx-auto bg-white p-8 rounded shadow-md">
+        <h1 class="text-2xl font-bold mb-4 text-gray-800">
+            Ejemplo: Autenticación con Google y Blogger
+        </h1>
+        <p class="text-red-500 mb-4 font-semibold">
+            CSP Ajustada para permitir scripts de Google - <strong class="underline">INSEGURO - SOLO EDUCATIVO</strong>
+        </p>
 
-    <!-- Sección de autenticación -->
-    <div id="auth-section" class="mb-6">
-      <button
-        onclick="authenticate()"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-      >
-        1. Iniciar Sesión con Google
-      </button>
-      <div id="authStatus" class="mt-2 text-sm text-gray-700 italic"></div>
+        <div id="auth-section" class="mb-6">
+            <button
+                onclick="authenticate()"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            >
+                1. Iniciar Sesión con Google
+            </button>
+            <div id="authStatus" class="mt-2 text-sm text-gray-700 italic"></div>
+        </div>
+
+        <div id="editor-section" class="hidden">
+            <h2 class="text-xl font-semibold mb-4 text-gray-800">
+                Crear / Editar / Borrar Post
+            </h2>
+
+            <div class="mb-4">
+                <label for="postId" class="block text-gray-700 text-sm font-bold mb-2">
+                    ID del Post:
+                </label>
+                <input
+                    type="text"
+                    id="postId"
+                    placeholder="(Necesario para Editar/Borrar)"
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                />
+            </div>
+
+            <div class="mb-4">
+                <label for="postTitle" class="block text-gray-700 text-sm font-bold mb-2">
+                    Título del Post:
+                </label>
+                <input
+                    type="text"
+                    id="postTitle"
+                    placeholder="Título del Post"
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                />
+            </div>
+
+            <div class="mb-6">
+                <label for="postContent" class="block text-gray-700 text-sm font-bold mb-2">
+                    Contenido del Post:
+                </label>
+                <textarea
+                    id="postContent"
+                    placeholder="Escribe aquí el contenido..."
+                    rows="6"
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                ></textarea>
+            </div>
+
+            <div class="flex flex-col gap-3 sm:flex-row sm:gap-4">
+                <button
+                    onclick="createPost()"
+                    id="createButton"
+                    disabled
+                    class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+                >
+                    Crear Post
+                </button>
+
+                <button
+                    onclick="editPost()"
+                    id="editButton"
+                    disabled
+                    class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+                >
+                    Editar Post
+                </button>
+
+                <button
+                    onclick="deletePost()"
+                    id="deleteButton"
+                    disabled
+                    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
+                >
+                    Borrar Post
+                </button>
+            </div>
+
+            <div id="editorStatus" class="mt-4 text-sm text-gray-700 italic"></div>
+        </div>
     </div>
 
-    <!-- Sección del editor (CRUD) -->
-    <div id="editor-section" class="hidden">
-      <h2 class="text-xl font-semibold mb-4 text-gray-800">
-        Crear / Editar / Borrar Post
-      </h2>
-      
-      <!-- Campo para ID del Post (editar/borrar) -->
-      <div class="mb-4">
-        <label for="postId" class="block text-gray-700 text-sm font-bold mb-2">
-          ID del Post:
-        </label>
-        <input
-          type="text"
-          id="postId"
-          placeholder="(Necesario para Editar/Borrar)"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        />
-      </div>
-
-      <!-- Título del Post (crear/editar) -->
-      <div class="mb-4">
-        <label for="postTitle" class="block text-gray-700 text-sm font-bold mb-2">
-          Título del Post:
-        </label>
-        <input
-          type="text"
-          id="postTitle"
-          placeholder="Título del Post"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        />
-      </div>
-
-      <!-- Contenido del Post (crear/editar) -->
-      <div class="mb-6">
-        <label for="postContent" class="block text-gray-700 text-sm font-bold mb-2">
-          Contenido del Post:
-        </label>
-        <textarea
-          id="postContent"
-          placeholder="Escribe aquí el contenido..."
-          rows="6"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        ></textarea>
-      </div>
-
-      <!-- Botones de acción -->
-      <div class="flex flex-col gap-3 sm:flex-row sm:gap-4">
-        <button
-          onclick="createPost()"
-          id="createButton"
-          disabled
-          class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
-        >
-          Crear Post
-        </button>
-
-        <button
-          onclick="editPost()"
-          id="editButton"
-          disabled
-          class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
-        >
-          Editar Post
-        </button>
-
-        <button
-          onclick="deletePost()"
-          id="deleteButton"
-          disabled
-          class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-50"
-        >
-          Borrar Post
-        </button>
-      </div>
-
-      <div id="editorStatus" class="mt-4 text-sm text-gray-700 italic"></div>
-    </div>
-  </div>
-
-  <!-- Código JS para la Autenticación y CRUD de Blogger -->
-  <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
