--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
           ">
 
     <!-- Bootstrap 5.3.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Google API -->
     <script src="https://apis.google.com/js/api.js"></script>
@@ -92,5 +91,6 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
